# cmake-notes

./: .gitignore  .gitmodules  README.md
part1/olas/: CMakeLists.txt
part2-original/Task1/: main.cpp
part2-original/Task2/: CMakeLists.txt  main.cpp
part2-original/Task2/Adder/: adder.cpp  adder.h
part2-original/olas/: CMakeLists.txt  adder.cpp  adder.h  main.cpp
part2-redone/SomeLibDemo/cpp/: CMakeLists.txt  adder.cpp  adder.h
part2-redone/SomeLibDemoBuiltin/cpp/: CMakeLists.txt
part2-redone/TestSome/cpp/: CMakeLists.txt
part2-redone/TestSomeBuiltin/cpp/: CMakeLists.txt  main.cpp
part2-redone/Trim/cpp/: CMakeLists.txt  main.cpp
part3/: CMakeLists.txt  build.sh  configure.sh  run.sh
part4/: CMakeLists.txt  main.cpp  part4Config.h.in
part5/: CMakeLists.txt  configure.sh  main.cpp  part5Config.h.in  run.sh
part5/Adder/: CMakeLists.txt  adder.cpp  adder.h
part6/: CMakeLists.txt  install.sh  main.cpp  part6Config.h.in  run.sh
part6/Adder/: CMakeLists.txt  adder.cpp  adder.h
